k8sAKS/php-nodejs-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-php-nodejs-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-php-nodejs-app
  template:
    metadata:
      labels:
        app: sample-php-nodejs-app
    spec:
      containers:
      - name: sample-php-nodejs-app
        image: samsonacr.azurecr.io/sample-php-nodejs-app:v3
        ports:
        - containerPort: 80
