k8sAKS/test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-test
spec:
  containers:
  - name: mysql-test
    image: mysql:8.0
    command: ["sleep", "3600"]
