k8sAKS/php-nodejs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-php-nodejs-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: sample-php-nodejs-app
