k8sAKS/ingressfile.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: your-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: samsonkubernetes.menuplusdining.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: your-service-name
                port:
                  number: 80
